# Sim

./: .gitignore  CMakeLists.txt
apps/Breakout/: CMakeLists.txt  program.cpp
apps/Breakout/levels/: one.lvl
libs/: CMakeLists.txt
libs/algs/include/: directions.h  path_finder.h
libs/algs/src/: CMakeLists.txt  path_finder.cpp
libs/game/include/: ball_object.h  game.h  game_level.h  game_object.h
libs/game/src/: CMakeLists.txt  ball_object.cpp  game.cpp  game_level.cpp  game_object.cpp  shader.cpp  sprite_renderer.cpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/misc/include/: random.h
libs/misc/src/: CMakeLists.txt  random.cpp
